--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,4 @@
 @import "../node_modules/@fullcalendar/timegrid/main.min.css";
 @import "assets/demo/flags/flags.css";
 @import "assets/demo/documentation.scss";
+@import "assets/layout/css/layout-light.css"
