--- a/src/app/pages/Auth/app.login.component.html
+++ b/src/app/pages/Auth/app.login.component.html
@@ -1,3 +1,4 @@
+<p-toast position="top-right"></p-toast>
 <div class="login-body">
     <div id="login-wrapper">
         <img src="assets/layout/images/login-logo.png" alt="omega-layout"  />
@@ -5,22 +6,29 @@
         <div id="login-container">
             <span class="title">Fugo Store</span>
 
-            <div class="grid p-fluid">
+            <form  [formGroup]="loginForm" (ngSubmit)="login()"   class="grid p-fluid">
                 <div class="col-12">
-                    <input type="email" autocomplete="off" pInputText placeholder="Email" />
+                    <input type="email"  pInputText placeholder="Email" formControlName="email" />
+                    <div *ngIf="validField('email')" class="text-danger">
+                        <span class="p-error" *ngIf="loginForm.controls['email'].errors?.['required']">Se requiere email*</span>
+                        <span class="p-error" *ngIf="loginForm.controls['email'].errors?.['email']">Debe ser un formato de Email Válido</span>
+                    </div>
                 </div>
                 <div class="col-12">
-                    <input type="password" autocomplete="off" pInputText placeholder="Contraseña" />
+                    <input type="password"  pInputText placeholder="Contraseña" formControlName="password" />
+                    <div *ngIf="validField('password')" class="text-danger">
+                        <span class="p-error" *ngIf="loginForm.controls['password'].errors?.['required']">Se requiere Contraseña*</span>
+                    </div>
                 </div>
 
                 <div class="col-12 md:col-6">
                     <a href="#">Contraseña Olvidada</a>
                 </div>
                 <div class="col-12 flex flex-column">
-                    <p-button type="button" label="Iniciar Sesión" icon="pi pi-user" [routerLink]="['/']"></p-button>
-                    <p-button class="py-3" styleClass="p-button-success" type="button" label="Registrarme" icon="pi pi-plus" [routerLink]="['/registro']"></p-button>
+                    <p-button type="submit" label="Iniciar Sesión" icon="pi pi-user" ></p-button>
+                    <p-button class="py-3" styleClass="p-button-success" type="button" label="Registrarme" icon="pi pi-plus" [routerLink]="['/auth/registro']"></p-button>
                 </div>
-            </div>
+            </form>
         </div>
 
         <div class="login-footer">Fugo Store POS 2022.</div>
