--- a/src/assets/sass/layout/_registro.scss
+++ b/src/assets/sass/layout/_registro.scss
@@ -1,5 +1,4 @@
-/* Login */
-.login-body {
+.registro-main {
     position: relative;
     width: 100%;
     height: 100%;
@@ -18,64 +17,4 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-}
-
-#login-wrapper {
-    width: 400px;
-    margin: 0 auto;
-    text-align: center;
-
-    #login-container {
-        margin-top: 20px;
-        box-sizing: border-box;;
-        height: 300px;
-        background-color: #ffffff;
-        box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
-        padding: 2em;
-        text-align: center;
-        color: #4f575b;
-
-        .title {
-            font-size: 20px;
-            display: block;
-            margin-bottom: 10px;
-        }
-
-        .remember-me {
-            display: inline-block;
-            vertical-align: middle;
-            margin-left: .5rem;
-        }
-
-        a {
-            color: #1f89ce;
-            text-decoration: none;
-            vertical-align: middle;
-            font-size: 16px;
-        }
-
-        .p-col-12, .p-col-6 {
-            padding: .8em;
-        }
-    }
-
-    .login-footer {
-        color: #ffffff;
-        font-size: $fontSize;
-        margin-top: 50px;
-    }
-}
-
-@media (max-width: 40em) {
-    .login-body {
-        padding-top: 50px;
-    }
-
-    #login-wrapper {
-        width: 320px;
-
-        #login-container {
-            height: 350px;
-        }
-    }
 }
