variables crud completo

--- a/src/app/app.main.component.html
+++ b/src/app/app.main.component.html
@@ -5,6 +5,7 @@
                                 'sidebar-active-m':menuActiveMobile,
                                 'p-ripple-disabled': !app.ripple, 'p-input-filled': app.inputStyle === 'filled'}">
     <p-toast position="top-right"></p-toast>
+    <p-confirmDialog header="Confirmación" icon="pi pi-exclamation-triangle"></p-confirmDialog>
     <app-topbar></app-topbar>
     <div class="sidebar" (click)="onMenuClick()">
         <div class="sidebar-scroll-content">
