--- a/src/app/pages/administracion/variables/categorias.component.html
+++ b/src/app/pages/administracion/variables/categorias.component.html
@@ -1,3 +1,4 @@
+<p-confirmDialog header="Confirmación" icon="pi pi-exclamation-triangle"></p-confirmDialog>
 <div class="grid">
     <div class="col-12">
         <div class="card">
@@ -35,7 +36,7 @@
                         </td>
                         <td>
                             <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success p-button-text  mr-2" (click)="editCategoria(rowData)"></button>
-                            <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-danger p-button-text" (click)="deleteProduct(product)"></button>
+                            <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-danger p-button-text" (click)="deleteProduct(rowData)"></button>
                         </td>
                     </tr>
                 </ng-template>
