--- a/src/app/pages/administracion/variables/locaciones.component.html
+++ b/src/app/pages/administracion/variables/locaciones.component.html
@@ -1,15 +1,16 @@
+<p-confirmDialog header="Confirmación" icon="pi pi-exclamation-triangle"></p-confirmDialog>
 <div class="grid">
     <div class="col-12">
         <div class="card">
             <p-toolbar styleClass="mb-4">
                 <ng-template pTemplate="left">
                     <div class="col-12 my-2">
-                        <button pButton pRipple label="Agregar" icon="pi pi-plus" class="p-button-success mr-2" (click)="nuevaCategoria()"></button>
+                        <button pButton pRipple label="Agregar" icon="pi pi-plus" class="p-button-success mr-2" (click)="nuevaLocalidad()"></button>
                     </div>
                 </ng-template>
             </p-toolbar>
 
-            <p-table  [rows]="10" [paginator]="true"
+            <p-table  [rows]="10" [paginator]="true" [value]="localidades"
                 responsiveLayout="scroll"
                 [rowHover]="true" dataKey="id"
                 currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [showCurrentPageReport]="true">
@@ -21,16 +22,22 @@
                 </ng-template>
                 <ng-template pTemplate="header">
                     <tr>
-                        <th pSortableColumn="id">ID <p-sortIcon field="id"></p-sortIcon>
+                        <th *ngFor="let col of cols">
+                            {{col.header}}
                         </th>
-                        <th pSortableColumn="nombre">Nombre <p-sortIcon field="nombre"></p-sortIcon>
-                        </th>
-                        <th >Acciones</th>
+                        <th style="width: 8rem" >Acciones</th>
 
                     </tr>
                 </ng-template>
-                <ng-template pTemplate="body" let-product>
+                <ng-template pTemplate="body" let-rowData let-columns="cols">
                     <tr>
+                        <td *ngFor="let col of cols">
+                            {{rowData[col.field]}}
+                        </td>
+                        <td>
+                            <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success p-button-text  mr-2" (click)="editLocalidad(rowData)"></button>
+                            <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-danger p-button-text" (click)="deleteProduct(rowData)"></button>
+                        </td>
                     </tr>
                 </ng-template>
 
